# WebPlusPlus

./: .gitignore  CMakeLists.txt  Makefile  README.md  migrate  migrations.txt  schema.json
core/includes/: datatypes.hpp  dbclient.hpp  dbquery.hpp  models.hpp
core/src/: datatypes.cpp  dbquery.cpp  models.cpp
user/includes/: renames.hpp
user/src/: models.cpp
